syntax = "proto3";

option go_package = "/registry";

message MatchRequest {
  string  group = 1;
  string key = 2;
}

message MatchResponse {
  string  id = 1;
  string group = 2;
  string addr = 3;
}

message MembersRequest {
  string  group = 1;
}

message MembersResponse {
  repeated MatchResponse services = 1;
}

service R {
  rpc Match (MatchRequest) returns (MatchResponse) {}
  rpc Members (MembersRequest) returns (MembersResponse) {}
}